# mobile_manipulator_ROS2

./: .gitignore
moma_bringup/: CMakeLists.txt  package.xml
moma_bringup/config/: ur_controllers.yaml
moma_bringup/launch/: moma_common.launch.py  moma_nav_moveit.launch.py  moma_system.launch.py
moma_bringup/rviz/: nav_moveit.rviz  rviz_real.rviz
moma_bringup/src/: moma_demo_node.py
moma_description/: CMakeLists.txt  package.xml
moma_description/config/: ur10e_calibration.yaml
moma_description/launch/: rsp.launch.py
moma_description/urdf/: moma.gazebo.xacro  moma.urdf.xacro
moma_gazebo/: CMakeLists.txt  package.xml
moma_gazebo/config/: ros_gz_bridge.yaml
moma_gazebo/launch/: moma_sim.launch.py
moma_gazebo/models/demo_model/: model.sdf
moma_gazebo/models/eight_square_meter/: model.config  model.sdf
moma_gazebo/models/room_map_demo/: model.config
moma_gazebo/scripts/: covariance_fixer_node.py  odom_tf_publisher.py
moma_gazebo/worlds/: demo_room.world.sdf  empty.world.sdf  object_demo.world.sdf
moma_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moma_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moma_robot.ros2_control.xacro  moma_robot.srdf  moma_robot.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo_params.yaml
moma_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moma_navigation/: CMakeLists.txt  package.xml
moma_navigation/config/: ekf.yaml  moma_nav2.yaml  slam_toolbox.yaml
moma_navigation/launch/: nav2.launch.py  slam.launch.py
moma_navigation/maps/: moma_map.yaml  new_perron.pgm  new_perron.yaml  perron_fullHallway.pgm  perron_fullHallway.yaml  perron_hallway_1.pgm  perron_hallway_1.yaml  perron_hallway_2.pgm  perron_hallway_2.yaml  perron_hallway_rightSide.pgm  perron_hallway_rightSide.yaml  test.pgm  test.yaml
moma_navigation/rviz/: rviz_config.rviz
moma_navigation/src/: path_drawer_node.py
moma_navigation/web/: index.html
moma_paper_demo/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
moma_paper_demo/config/: demo_params.yaml  holistic_demo_params.yaml
moma_paper_demo/launch/: demo.launch.py  holistic_demo.launch.py
moma_paper_demo/moma_paper_demo/: controller_node.py  lock_on_arm_node.py  sine_wave_base_node.py  whole_body_controller.py
moma_paper_demo/test/: test_whole_body_controller.py
(+26 files in other folders)
